--- a/cs/kap03.tex
+++ b/cs/kap03.tex
@@ -113,7 +113,7 @@ Velkými tématy pro videohry jsou jak známo například \textbf{vykreslování
 
 Jedním z těchto subsystémů, který budeme napříč naší prací extenzivně využívat, je ten pro fyzikální simulaci. Jeho náplní práce je vypočítávat pohyby a síly působící mezi objekty herní scény, způsobem velmi podobným tomu, jaký známe z klasické středoškolské kinematiky a dynamiky pevného tělesa. Unity poskytuje takové systémy dokonce dva\footnote{Více když neopomeneme Unity DOTS.} - jeden operující v 3D prostoru, druhý pro 2D. Oba jsou samostatnými celky a nesdílejí žádné společné součásti. Ve zbytku práce budeme fyzikálním subsystémem automaticky myslet ten pro 3D.   
 
-Užitečnou informací je, že tento subsystém je pouze tenkým rozhraním pro podmnožinu funkcionality backendu, kterým je Nvidia PhysX \cite{PhysX}. Dokumentaci Nvidie \cite{PhysX} lze tedy doporučit k pročtení komukoliv, kdo chce získat hlubší pochopení celkového fungování systému, než jaké nabízí oficielní dokumentace Unity.
+Užitečnou informací je, že tento subsystém je pouze tenkým rozhraním pro podmnožinu funkcionality backendu, kterým je Nvidia PhysX \cite{PhysX}. Dokumentaci Nvidie \cite{PhysX} lze tedy doporučit k pročtení komukoliv, kdo chce získat hlubší porozumění celkovému fungování systému, než jaké nabízí oficielní dokumentace Unity.
 
 \subsection{Základy}
 
