--- a/cs/kap03.tex
+++ b/cs/kap03.tex
@@ -183,6 +183,8 @@ Jednou z příčin, kterou jsme již nastínili, je \textbf{krokovaný charakter
 
 Dalším faktorem jsou \textbf{řešičky}, pomocí kterých jsou počítány síly potřebné k řešení kolizí a uspokojení požadavků jointů. Algoritmy v nich používané jsou v zájmu výkonu aproximativní a vykonávané s nízkým počtem iterací.
 
+Rovněž nepomáhá, že některé chyby \textbf{lidského faktoru} (např. při rozmisťování primitivních colliderů) mohou být špatně rozlišitelné od chyb plynoucích z nestability simulace. 
+
 Pro fyzikální systém je tedy nutností alespoň poskytnout tvůrci hry možnost \textbf{konfigurace parametrů}, které na stabilitu mají vliv - mezi základními najdeme např. interval mezi fixními updaty, počet iterací pro řešičku či variantu algoritmu, již má řešička používat.
 
 Velmi užitečným nástrojem je rovněž vestavěný \textbf{fyzikální debugger}, který umožňuje mnoho jevů a fyzikálních objektů v reálném čase vizualizovat.
