addded literature for 1.4

--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -48,6 +48,26 @@
   date = {1998-11-19},
 }
 
+@software{BladeAndSorcery,
+  author = {{WarpFrog}},
+  title = {Blade and Sorcery},
+  url = {https://store.steampowered.com/app/629730/Blade_and_Sorcery/},
+  date = {2018-12-11},
+}
+@software{Gorn,
+  author = {{Free Lives}},
+  title = {GORN},
+  url = {https://store.steampowered.com/app/629730/Blade_and_Sorcery/},
+  date = {2019-07-19},
+}
+
+@software{ZeldaSkywardSword,
+  author = {{Nintendo}},
+  title = {The Legend of Zelda: Skyward Sword},
+  url = {https://www.zelda.com/skyward-sword-hd/},
+  date = {2011-11-18},
+}
+
 
 @manual{PhysX,
   author       = {NVIDIA},
@@ -142,4 +162,12 @@
   author       = {Sapkowski, Andrzej},
   title        = {Zaklínač},
   url          = {http://www.andrzejsapkowski.pl/saga.html},
+}
+
+@phdthesis{SmartphoneSensorsEvaluation,
+  author      = {Kos, Anton and Tomažič, Sašo and Umek, Anton},
+  school      = {Faculty of Electrical Engineering, University of Ljubljana},
+  title       = {Evaluation of Smartphone Inertial Sensor Performance for Cross-Platform Mobile Applications},
+  year        = {2016},
+  url         = {https://doi.org/10.3390/s16040477},
 }
